# TrinityCore

./: .travis.yml  CMakeLists.txt
.circleci/: config.yml
cmake/: showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: SFMT.h
dep/boost/: CMakeLists.txt
dep/bzip2/: bzlib.c  compress.c
dep/fmt/fmt/: format.h
dep/g3dlite/: CMakeLists.txt  G3D-v10.0 hotfix1.patch  Readme.txt
dep/g3dlite/include/G3D/: Array.h  AtomicInt32.h  G3DString.h  LineSegment.h  Table.h  debug.h  g3dmath.h  platform.h  unorm16.h
dep/g3dlite/source/: BinaryOutput.cpp  Capsule.cpp  Cylinder.cpp  FileSystem.cpp  Random.cpp  RegistryUtil.cpp  System.cpp  TextInput.cpp  debugAssert.cpp  fileutils.cpp  format.cpp  prompt.cpp
dep/gsoap/: soapC.cpp  stdsoap2.cpp  stdsoap2.h
dep/libmpq/libmpq/: huffman.c
dep/recastnavigation/Detour/Include/: DetourNode.h
dep/recastnavigation/Detour/Source/: DetourNavMeshQuery.cpp
sql/base/: auth_database.sql  characters_database.sql
sql/base/dev/: world_database.sql
sql/updates/auth/3.3.5/: 2019_99_99_99_auth.sql
src/: CMakeLists.txt
src/cli/: AssemblyInfo.cpp  CMakeLists.txt  DBCStoresCLI.cpp  DBCStoresCLI.h  DetourCLI.cpp  DetourCLI.h  FakeTC.cpp  FakeTC.h  Field.h  Lock.h  MapCLI.cpp  MapCLI.h  VMapCLI.cpp  VMapCLI.h  mutexCLI.h
src/common/: Define.h
src/common/Collision/Management/: VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: TileAssembler.cpp
src/common/Collision/Models/: WorldModel.cpp
src/common/Cryptography/: BigNumber.h
src/common/Debugging/: WheatyExceptionReport.cpp
src/common/Logging/: Log.h
src/common/Platform/: ServiceWin32.cpp
src/common/Threading/: LockedQueue.h  MPSCQueue.h
src/common/Utilities/: EventProcessor.h  Random.cpp  Util.cpp  Util.h
src/server/authserver/Server/: AuthSession.cpp  AuthSession.h
src/server/collision/Management/: VMapManager2.cpp  VMapManager2.h
src/server/database/Database/: MySQLPreparedStatement.cpp  PreparedStatement.cpp
src/server/database/Database/Implementation/: LoginDatabase.cpp
src/server/database/Updater/: DBUpdater.cpp
src/server/game/AI/: CreatureAI.cpp
src/server/game/Accounts/: RBAC.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp
src/server/game/Battlegrounds/: Arena.cpp  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundQueue.cpp
src/server/game/Battlegrounds/Zones/: BattlegroundAV.cpp  BattlegroundDS.cpp  BattlegroundRV.cpp
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/ChatCommands/: ChatCommand.h  ChatCommandHelpers.h
src/server/game/DataStores/: DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFGGroupData.cpp  LFGMgr.cpp
src/server/game/Entities/Creature/: Creature.cpp
src/server/game/Entities/DynamicObject/: DynamicObject.cpp
src/server/game/Entities/GameObject/: GameObject.cpp  GameObjectData.h
src/server/game/Entities/Item/: ItemEnchantmentMgr.cpp
src/server/game/Entities/Object/: Object.cpp
src/server/game/Entities/Pet/: Pet.cpp
src/server/game/Entities/Player/: EquipmentSet.h  Player.cpp  Player.h
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Events/: GameEventMgr.cpp
src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/Notifiers/: GridNotifiers.h
src/server/game/Guilds/: Guild.cpp  Guild.h
src/server/game/Handlers/: BattleGroundHandler.cpp  CalendarHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  GroupHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  ReferAFriendHandler.cpp
src/server/game/Loot/: LootMgr.cpp
src/server/game/Maps/: Map.cpp
src/server/game/Miscellaneous/: Formulas.h  Language.h
src/server/game/Movement/: PathGenerator.cpp
src/server/game/Movement/MovementGenerators/: ChaseMovementGenerator.cpp
src/server/game/Movement/Spline/: MovementPacketBuilder.cpp
src/server/game/OutdoorPvP/: OutdoorPvPMgr.cpp
src/server/game/Pools/: PoolMgr.cpp
src/server/game/Quests/: QuestDef.cpp
src/server/game/Scripting/: ScriptLoader.cpp  ScriptMgr.cpp
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp
src/server/game/Server/Packets/: PacketUtilities.h
src/server/game/Server/Protocol/: Opcodes.cpp
src/server/game/Spells/: Spell.cpp  SpellEffects.cpp  SpellMgr.cpp
src/server/game/Spells/Auras/: SpellAuras.cpp
src/server/game/Weather/: Weather.cpp
src/server/game/World/: World.cpp  World.h
src/server/scripts/Commands/: cs_debug.cpp  cs_gobject.cpp  cs_list.cpp  cs_misc.cpp  cs_mmaps.cpp  cs_npc.cpp  cs_wp.cpp
src/server/scripts/EasternKingdoms/ScarletEnclave/: chapter5.cpp
src/server/scripts/EasternKingdoms/ZulAman/: boss_janalai.cpp  boss_nalorakk.cpp
src/server/scripts/Kalimdor/CavernsOfTime/BattleForMountHyjal/: hyjalAI.cpp
src/server/scripts/Kalimdor/TempleOfAhnQiraj/: mob_anubisath_sentinel.cpp
src/server/scripts/Northrend/: zone_icecrown.cpp
src/server/scripts/Northrend/ChamberOfAspects/ObsidianSanctum/: boss_sartharion.cpp
src/server/scripts/Northrend/IcecrownCitadel/: boss_icecrown_gunship_battle.cpp  boss_sister_svalna.cpp  boss_the_lich_king.cpp  icecrown_citadel.cpp
src/server/scripts/Northrend/Naxxramas/: boss_patchwerk.cpp  boss_sapphiron.cpp
src/server/scripts/OutdoorPvP/: OutdoorPvPNA.cpp
src/server/scripts/Outland/BlackTemple/: boss_illidari_council.cpp
src/server/scripts/Pet/: pet_mage.cpp
src/server/scripts/Spells/: spell_generic.cpp  spell_hunter.cpp  spell_mage.cpp  spell_pet.cpp
src/server/shared/DataStores/: DBCDatabaseLoader.cpp  DBCStructure.h  DBCfmt.h
src/server/shared/Database/Implementation/: CharacterDatabase.cpp  CharacterDatabase.h
src/server/shared/Dynamic/: LinkedList.h
src/server/shared/Packets/: ByteBuffer.cpp  ByteBuffer.h
src/server/worldserver/: Main.cpp  worldserver.conf.dist
src/tools/map_extractor/: System.cpp
src/tools/mmaps_generator/: MapBuilder.cpp
src/tools/vmap4_extractor/: vmapexport.cpp
(+4 files in other folders)
